--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Project-specific files
-training/dev/data/*.csv
+database/raw_data/*.csv
 serving/app/modules/test_model/
-training/artifacts/test_*.joblib
+training/artifacts/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
