--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ numpy==1.23.4
 pandas==1.5.1
 prometheus-fastapi-instrumentator==5.9.1
 pydantic==1.10.2
-scikit-learn==1.1.3
+scikit-learn==1.1.2
 uvicorn==0.19.0
 fastapi-utils==0.2.1
 fastapi-cache2==0.1.9
@@ -15,3 +15,6 @@ starlette_prometheus==0.9.0
 locust==1.4.1
 matplotlib
 seaborn
+pymysql
+mlflow
+pendulum
