--- a/etl/requirements.txt
+++ b/etl/requirements.txt
@@ -1,6 +1,16 @@
 numpy==1.23.4
 pandas==1.5.1
 scikit-learn==1.1.2
+SQLAlchemy==1.3.20
+# marshmallow-sqlalchemy==0.27.0
 python-dotenv==0.21.0
+matplotlib
+seaborn
+pymysql
+mlflow
+cryptography
 pendulum
-joblib
+xgboost==1.6.2
+psycopg2
+psycopg2-binary
+apache-airflow[celery]
