--- a/training/local.env
+++ b/training/local.env
@@ -5,17 +5,17 @@ NUMBER_OF_WORKER = 1
 NUMBER_OF_API_INSTANCES = 1
 CELERY_BROKER_URL = "redis://localhost:6379/0"
 
-MYSQL_HOST = "mysql"
+MYSQL_HOST = '0.0.0.0'
 MYSQL_USER = "admin"
 MYSQL_PWD = "admin"
 MYSQL_ROOT_PWD = "root"
 MYSQL_PORT = "3306"
 MYSQL_DB = "podfoods"
 
-MLFLOW_HOST = "mlflow"
+MLFLOW_HOST = '0.0.0.0'
 MLFLOW_PORT = "5000"
 
-MYSQL_MLFLOW_HOST = "mysql_mlflow"
+MYSQL_MLFLOW_HOST = '0.0.0.0'
 MYSQL_MLFLOW_USER = "mlflow_user"
 MYSQL_MLFLOW_PWD = "mlflow_password"
 MYSQL_MLFLOW_ROOT_PWD = "qwerty"
@@ -23,5 +23,3 @@ MYSQL_MLFLOW_PORT = "3306"
 MYSQL_MLFLOW_DB = "mlflow"
 
 MLFLOW_ARTIFACT_ROOT = "file:artifacts"
-
-AIRFLOW_MAIN_PATH="/opt/airflow/dags/repo"
