update api response structure

--- a/serving/Dockerfile
+++ b/serving/Dockerfile
@@ -4,5 +4,6 @@ WORKDIR /pf/
 
 COPY . .
 
+RUN pip install --user --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 CMD [ "python", "main.py" ]
