--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,14 +12,12 @@ services:
     healthcheck:
       test: ["CMD", "curl", "-f", "http://0.0.0.0:8000"]
     volumes:
-      - ./training/artifacts:/pf/artifacts/
+      - ./training/artifacts:/mlops/artifacts/
     depends_on:
       mlflow:
         condition: service_started
       mysql:
         condition: service_started
-    networks:
-      pf-backend:
 
   prometheus:
     image: prom/prometheus:latest
@@ -36,8 +34,6 @@ services:
       - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
-    networks:
-      pf-backend:
 
   grafana:
     image: grafana/grafana:latest
@@ -53,8 +49,6 @@ services:
       - ./monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards/
     env_file:
       - ./monitoring/grafana/config.monitoring
-    networks:
-      pf-backend:
 
   mysql:
     image: mysql:8.0
@@ -64,8 +58,6 @@ services:
     container_name: mysql
     ports:
       - "3306:3306"
-    networks:
-      pf-backend:
     healthcheck:
         test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
         timeout: 20s
@@ -96,8 +88,6 @@ services:
         condition: service_healthy
     command: mlflow server --host 0.0.0.0 --port 5000 --backend-store-uri mysql+pymysql://${MYSQL_MLFLOW_USER}:${MYSQL_MLFLOW_PWD}@mysql_mlflow:3306/${MYSQL_MLFLOW_DB} --default-artifact-root ${MLFLOW_ARTIFACT_ROOT}
     # command: mlflow server --backend-store-uri=sqlite:///artifacts.db --default-artifact-root=file:training/artifacts --host 0.0.0.0 --port 5000
-    networks:
-      pf-backend:
 
   mysql_mlflow:
     image: mysql:8.0
@@ -120,13 +110,7 @@ services:
       - mysql_mlflow_db:/var/lib/mysql
     cap_add:
       - SYS_NICE
-    networks:
-      pf-backend:
 
 volumes:
   mysql_db:
   mysql_mlflow_db:
-
-networks:
-  pf-backend:
-    driver: bridge
