--- a/training/local.env
+++ b/training/local.env
@@ -10,7 +10,7 @@ MYSQL_USER = "admin"
 MYSQL_PWD = "admin"
 MYSQL_ROOT_PWD = "root"
 MYSQL_PORT = "3306"
-MYSQL_DB = "podfoods"
+MYSQL_DB = "mlops"
 
 MLFLOW_HOST = '0.0.0.0'
 MLFLOW_PORT = "5000"
